@@ -1,0 +1,15 @@
+[mypy]
+python_version = 3.6
+show_error_codes = True
+show_column_numbers = True
+
+disallow_incomplete_defs = True
+disallow_untyped_calls = True
+disallow_untyped_decorators = True
+disallow_untyped_defs = True
+
+disallow_any_decorated = True
+disallow_any_explicit = True
+disallow_any_generics = True
+disallow_any_unimported = True
+disallow_subclassing_any = True
